fixing dark mode

--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -583,10 +583,9 @@ body {
 }
 
 .projects-section .mx-3{
-  color: #000000;
+  color: #fff !important;
   font-size: 14px;
   margin-bottom: 50px;
-
 }
 
 .projects-section .mx-3:hover{
@@ -643,7 +642,7 @@ body {
     height: 400px !important;
   }
   .projects-section .mx-3{
-    color: #000000;
+    color: #fff;
     font-size: 18px;
   }
   
